# Sentiment-Analysis-Scripts

./: README.md  pyproject.toml
src/: jan_6_roberta_analysis.py  jan_6_vader_analysis.py
